follow HCS detailed -> toString